updated to work with docker compose
